# docs/swagger.yaml
@@ -14,9 +14,26 @@ definitions:
       _id:
         type: string
       created_at:
+        description: auto-generated created time
         type: integer
       name:
         type: string
+      tags:
+        items:
+          type: string
+        type: array
+    type: object
+  mongo.DeleteResult:
+    properties:
+      deletedCount:
+        description: The number of documents deleted.
+        type: integer
+    type: object
+  mongo.InsertOneResult:
+    properties:
+      insertedID:
+        description: The _id of the inserted document. A value generated by the driver
+          will be of type primitive.ObjectID.
     type: object
 externalDocs:
   description: OpenAPI
@@ -37,16 +54,14 @@ info:
 paths:
   /s:
     get:
-      consumes:
-      - application/json
       description: list all sessions
       parameters:
       - description: pagination offset
-        in: path
+        in: query
         name: offset
         type: string
-      - description: pagination limit
-        in: path
+      - description: pagination limit, default is 5
+        in: query
         name: limit
         type: integer
       produces:
@@ -71,6 +86,105 @@ paths:
           schema:
             $ref: '#/definitions/memo.HTTPError'
       summary: get all sessions
+      tags:
+      - sessions
+  /s/:id:
+    get:
+      consumes:
+      - application/json
+      description: get one sessions
+      parameters:
+      - description: the session to get
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/memo.Session'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/memo.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/memo.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/memo.HTTPError'
+      summary: get one session by id
+      tags:
+      - sessions
+  /s/:id/del:
+    delete:
+      consumes:
+      - application/json
+      description: remove one sessions
+      parameters:
+      - description: the session to delete
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/mongo.DeleteResult'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/memo.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/memo.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/memo.HTTPError'
+      summary: remove one session
+      tags:
+      - sessions
+  /s/add:
+    put:
+      consumes:
+      - application/json
+      description: add a sessions
+      parameters:
+      - description: the session to be created
+        in: body
+        name: session
+        schema:
+          $ref: '#/definitions/memo.Session'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/mongo.InsertOneResult'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/memo.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/memo.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/memo.HTTPError'
+      summary: create a session
       tags:
       - sessions
 securityDefinitions:
